--- a/public/main.css
+++ b/public/main.css
@@ -1,4 +1,3 @@
-
 * {
     box-sizing: border-box;
 }
@@ -25,7 +24,10 @@ main {
 
 .img-container {
     position: relative;
-    width: 100%;
+    top: -20px;
+    /* width: 100%; */
+    /* max-width: 375px; */
+    overflow: hidden;
     text-align: center;
     color: white;
     font-family: 'Francois One', sans-serif;
@@ -34,6 +36,7 @@ main {
 img {
     width: 100%;
     height: auto;
+    /* max-width: initial; */
 }
 
 .img-container .more-btn {
@@ -193,15 +196,11 @@ th button {
     font-size: .9em;
 }
 
-.permissions button:hover,
-.permissions button:focus {
-    transition: background .2ms ease-in-out,
-                border .2ms ease-in-out;
+.permissions button:hover, .permissions button:focus {
+    transition: background .2ms ease-in-out, border .2ms ease-in-out;
     border: 1px solid white;
     background: #fd5f00;
 }
-
-
 
 .permissions tr:nth-child(even) {
     background: #c7b198;
@@ -367,7 +366,6 @@ fieldset {
     border: 0;
 }
 
-
 button {
     border: none;
     cursor: pointer;
@@ -388,9 +386,7 @@ form button {
     border-radius: 1px;
 }
 
-.list-results button:hover, .list-results button:focus,
-.results button:hover, .results button:focus,
-form button:hover, form button:focus {
+.list-results button:hover, .list-results button:focus, .results button:hover, .results button:focus, form button:hover, form button:focus {
     border: 1px solid white;
     /* background: #4aa6b5; */
     outline: none;
@@ -483,7 +479,7 @@ form button:hover, form button:focus {
     float: right;
     margin: .5em;
     background-color: black;
-    color:white;
+    color: white;
     padding: .5em;
     border-radius: 2px;
     border: 1px solid black;
@@ -495,7 +491,6 @@ form button:hover, form button:focus {
     grid-gap: 1.5em;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-auto-rows: 1fr;
-
 }
 
 .grid-item {
@@ -515,11 +510,9 @@ form button:hover, form button:focus {
     color: white;
 }
 
-.side-menu button:focus,
-.side-menu button:hover {
+.side-menu button:focus, .side-menu button:hover {
     color: #014955;
 }
-
 
 .grid-item ul {
     margin: 0;
@@ -738,16 +731,20 @@ select {
     top: 180%;
 }
 
-
 .hide-it {
     display: none;
 }
 
-.info-container p:first-child {
-    font-size: 1.2em;
+.info-container {
+    margin-top: -1em;
 }
 
-@media (orientation: landscape){
+.info-container p:first-child {
+    font-size: 1.2em;
+    font-family: 'Francois One', sans-serif;
+}
+
+@media (orientation: landscape) {
     .employee-form, .info-container {
         width: 70%;
     }
@@ -755,14 +752,17 @@ select {
         margin: 1em auto;
     }
     .info-container {
-        margin: auto;
+        margin: -1em auto;
+    }
+    .img-container {
+        top: -40px;
     }
     img {
-        position: relative;
+        height: 20em;
     }
     .info-container p:first-child {
         position: absolute;
-        background-color: rgba(255, 255, 255, .35);
+        background-color: rgba(255, 255, 255, .45);
         border-radius: 2px;
         padding: .2em .8em;
         left: 6%;
@@ -775,138 +775,103 @@ select {
         top: 19%;
         left: 80%;
     }
-    
     .form {
         margin-top: 2.6em;
     }
-
     form input {
         width: 50%;
         margin-right: 1em;
     }
-
     .form p:nth-child(1) {
         margin: .5em auto;
     }
-
     .search-form {
         margin-top: 1.5em;
     }
-
     .js-form p {
         margin: 0 auto;
     }
-
     footer {
         margin-top: .5em;
     }
-
     .grid-container {
         width: 100%;
         margin-left: 0;
     }
-
     .results h1 {
         margin: .2em 1.9em;
         text-align: center;
     }
-
     .intro h1 {
         margin-top: 2em;
     }
-
-    .results .goto-edit,
-    .results .delete-btn {
+    .results .goto-edit, .results .delete-btn {
         width: 30%;
     }
-
-    .intro p,
-    .help p {
+    .intro p, .help p {
         width: 100%;
     }
-
-
     .go-up p:nth-child(1) {
         left: 80%;
         top: 90px;
     }
-
     footer p {
         margin-top: 0;
     }
-
     .login-form {
         margin-top: 5em;
         font-size: .9em;
     }
-
-    .list-results,
-    .results {
+    .list-results, .results {
         position: static;
         grid-column: 2/3;
         margin: 5em auto 1em;
         padding: 0;
     }
-
-    .signup-form button,
-    .login-form button {
+    .signup-form button, .login-form button {
         display: inline-block;
         margin-top: 0;
         margin-left: .4em;
     }
-
     .signup-form legend {
         float: right;
     }
-
     .signup-form label {
         font-size: 1em;
     }
-
-    #name,
-    #email,
-    #employerName {
+    #name, #email, #employerName {
         width: 60%;
         font-size: .9em;
         display: block;
     }
-
-    .list,
-    .list-results {
+    .list, .list-results {
         margin: 4em auto;
     }
-
     .grid-item {
         font-size: .9em;
     }
-
     table {
         margin: 5% 10% 2% 10%;
         width: 80%;
     }
-
     .enter {
         margin: 5%;
     }
-
     .info-window {
         left: 30%;
         width: 60%;
         top: 5em;
         font-size: 1.4em;
     }
-
     .info-window p {
         text-align: center;
         text-transform: capitalize;
     }
-
     .create-form p:nth-child(1) {
         top: 20%;
         left: 87%;
         font-size: .8em;
     }
-
     .buttons button {
         width: 30%;
         margin-left: 5%;
@@ -914,25 +879,20 @@ select {
         padding: .7em 0;
         font-size: .9em;
     }
-
-    .close,
-    .clear {
+    .close, .clear {
         margin-top: .5em;
         font-size: 1.2em;
         margin-right: 8%;
     }
-
     .tooltiptext {
         font-size: .8em;
         width: 250px;
     }
-
     .fa-info-circle .tooltiptext {
         left: -500%;
         top: -600%;
     }
 }
-
 
 @media only screen and (min-width: 800px) {
     body {
@@ -941,16 +901,15 @@ select {
     .info-container {
         width: 60%;
     }
-
     .info-container p:first-child {
-        font-size: 1.9em;
+        font-size: 1.6em;
+        width: 40%;
     }
     .results {
         padding: 0;
         top: 11em;
         left: 15%;
     }
- 
     .tooltip .tooltiptext {
         width: 300px;
     }
@@ -966,16 +925,13 @@ select {
         left: 0;
         top: 120%;
     }
-
-    .create-form p:nth-child(1){
+    .create-form p:nth-child(1) {
         top: 13%;
         left: 89%;
     }
-
 }
 
-@media only screen and (min-width: 900px) {
-
+@media only screen and (min-width: 905px) {
     .close, .clear {
         margin-right: 10%;
     }
@@ -994,19 +950,27 @@ select {
         width: 40%;
     }
     .info-container p:first-child {
-        left: 8%;
-        top: -1%;
-        font-size: 1.8em;
+        right: 0;
+        margin-right: 0;
+        top: -1.8em;
+        font-size: 1.7em;
+        width: 30%;
+        height: 15.5em;
+        padding: 2em 1.2em .2em;
+        background-color: #363434;
+        color: #f9f8eb;
+    }
+    img {
+        height: 26.94em;
+        float: left;
+        width: 70%;
     }
     .create-form p:nth-child(1) {
         top: 15%;
         left: 65%;
     }
-  
     .go-up p:nth-child(1) {
         top: 13%;
         left: 80%;
     }
-    
 }
-
