Change info-container background color for screen size>700px.

--- a/public/main.css
+++ b/public/main.css
@@ -957,8 +957,8 @@ select {
         width: 30%;
         height: 15.5em;
         padding: 2em 1.2em .2em;
-        background-color: #363434;
-        color: #f9f8eb;
+        background-color: #1d2323;
+        color: white;
     }
     img {
         height: 26.94em;
