--- a/public/main.css
+++ b/public/main.css
@@ -495,8 +495,8 @@ form button {
 
 .grid-item {
     padding: .2em;
-    border-radius: 1px;
-    border: 1px solid black;
+    border-radius: 3px;
+    border: 1px solid lightgray;
     background-color: white;
     font-size: 1em;
     color: black;
@@ -505,8 +505,7 @@ form button {
 
 .grid-item:focus, .grid-item:hover {
     transform: scaleY(1);
-    border-radius: 3px;
-    border: 5px solid black;
+    border: 2px solid black;
 }
 
 .side-menu button:focus, .side-menu button:hover {
